# soccer_analysis

./: README.md  main.py  pyproject.toml  yolo_inference.py
camera_movement_esitimator/: camera_movement_estimator.py
development_analysis/: color_assignment.ipynb
player_ball_assigners/: player_ball_assigner.py
speed_distance_estimator/: speed_and_distance_estimator.py
stubs/: track_stub.pkl
team_assigner/: team_assigner.py
team_ball_control/: __init__.py  team_ball_control.py
trackers/: __init__.py  tracker.py
training/: football_training_yolo_v5.ipynb
training/footballers-1/: data.yaml
utils/: __init__.py  bbox_utils.py  video_utils.py
view_transformer/: view_transformer.py
