[project]
name = "socceranalysis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10,<3.12"
dependencies = [
    "dotenv>=0.9.9",
    "ipykernel>=6.30.1",
    "jupyter>=1.1.1",
    "numpy==1.26.4",
    "opencv-python>=4.11.0.86",
    "pandas>=2.3.2",
    "roboflow>=1.2.7",
    "supervision>=0.26.1",
    "torch==2.2.0",
    "torchaudio==2.2.0",
    "torchvision==0.17.0",
    "ultralytics>=8.3.191",
]
